--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,16 +3,11 @@ name: Build
 on:
   push:
     branches:
-      - 'master'
-    tags:
-      - 'v*'
+      - main
+  workflow_call:
 
 jobs:
-  tests:
-    uses: ./.github/workflows/run-tests.yml
-
   build:
-    needs: [tests]
     runs-on: ubuntu-latest
     steps:
       -
@@ -40,6 +35,13 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      -
+        name: ACR Login
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+          username: ${{ secrets.ACR_BIKEPACK_USERNAME }}
+          password: ${{ secrets.ACR_BIKEPACK_PASSWORD }}
       -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
