--- a/manifests/ingress.yml
+++ b/manifests/ingress.yml
@@ -1,17 +1,14 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
 metadata:
-  name: user-service
-  annotations:
-    kubernetes.io/ingress.class: azure/application-gateway
+  name: user-ingress
 spec:
-  rules:
-  - http:
-      paths:
-      - path: /api/users
-        pathType: Prefix
-        backend:
-          service:
-            name: user-service
-            port: 
-              number: 1234
+  routes:
+    - match: PathPrefix(`/api/users`)
+      kind: Rule
+      services:
+        - name: user-service
+          port: 1234
+      middlewares:
+        - name: allow-headers
+        - name: forward-auth
